--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,38 @@ body {
   padding: 0;
   background-color: #0a0a0a; /* fallback */
 }
+/* //for view Custome scroll  */
+  .animate-fade-in {
+    animation: fadeInModal 0.25s ease-out;
+  }
+  @keyframes fadeInModal {
+    from {
+      opacity: 0;
+      transform: translateY(40px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  /* Custom Scrollbar Styling */
+  .custom-scroll::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  .custom-scroll::-webkit-scrollbar-track {
+    background: #1c1917; /* dark background */
+    border-radius: 100vh;
+  }
+
+  .custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #facc15; /* yellow-400 */
+    border-radius: 100vh;
+    border: 2px solid #1c1917;
+  }
+
+  .custom-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #fbbf24; /* yellow-500 on hover */
+  }
+
